--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
   color: #ccc;
   margin-top: 0.8rem;
   margin-bottom: 0.8rem;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 4vw, 1.6rem);
 }
 
 .checkerContainer .form-group {
@@ -46,19 +46,31 @@ body {
 }
 
 .checkerContainer .form-group #passwordChecker {
-  width: 100%;
-  height: 100%;
-  outline: none;
-  font-size: 1rem;
-  padding: 0 0.5rem;
-  margin-top: 0.2rem;
-  color: #ccccccbd;
-  position: relative;
-  letter-spacing: 1px;
-  border-radius: 0.4rem;
-  background: transparent;
-  border: 3px solid #3b3b3b;
-  transition: background 0.19s ease-in-out;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    font-size: 1rem;
+    margin-top: 0.2rem;
+    color: #ccccccbd;
+    position: relative;
+    letter-spacing: 1px;
+    border-radius: 0.4rem;
+    background: transparent;
+    padding: 0 2rem 0 0.5rem;
+    border: 3px solid #3b3b3b;
+    transition: background 0.19s ease-in-out;
+}
+
+.checkerContainer .passTypeToggle {
+    top: 50%;
+    right: 4%;
+    display: none;
+    font-size: 18px;
+    cursor: pointer;
+    color: #ccccccbd;
+    position: absolute;
+    transform: translate(10%, -50%);
+    font-family: "Font Awesome 5 Free";
 }
 
 .checkerContainer .form-group::before {
@@ -85,23 +97,42 @@ body {
   color: #fff;
 }
 
-.checkerContainer .form-group #passwordChecker.error {
-  outline-offset: 1px;
+.checkerContainer .form-group.weak #passwordChecker {
   color: rgb(239, 68, 68);
-  outline: 2px solid rgb(239, 68, 68);
+  border: 2px solid rgb(239, 68, 68);
 }
 
-.checkerContainer .message.error {
+.checkerContainer .form-group.weak::before{
+    color: rgb(239, 68, 68);
+}
+
+.checkerContainer .form-group.medium #passwordChecker {
+  color: rgb(251, 191, 36);
+  border: 2px solid rgb(251, 191, 36);
+}
+
+.checkerContainer .form-group.medium::before{
+    color: rgb(251, 191, 36);
+}
+
+.checkerContainer .form-group.strong::before{
+    color: rgb(34, 197, 94);
+}
+
+.checkerContainer .message.weak {
   color: rgb(239, 68, 68) !important;
 }
 
-.checkerContainer .form-group #passwordChecker.success {
-  outline-offset: 1px;
-  color: rgb(34, 197, 94);
-  outline: 2px solid rgb(34, 197, 94);
+.checkerContainer .message.medium {
+  color: rgb(251, 191, 36) !important;
 }
 
-.checkerContainer .message.success {
+.checkerContainer .form-group.strong #passwordChecker {
+  color: rgb(34, 197, 94);
+  border: 2px solid rgb(34, 197, 94);
+}
+
+.checkerContainer .message.strong {
   color: rgb(34, 197, 94) !important;
 }
 
